edito el swagger y  ajusto las tareas
