# src/routes/auth.routes.js
@@ -1,9 +1,10 @@
 const { Router } = require("express");
+const { AuthMiddleware, ParseIntMiddleware,CacheMiddleware } = require("../middlewares");
 
 module.exports = function({ AuthController }) {
   const router = Router();
 
-  router.post("/signup", AuthController.signUp);
+  router.post("/signup", [AuthMiddleware, ParseIntMiddleware],AuthController.signUp);
   router.post("/signin", AuthController.signIn);
 
   return router;
