# src/routes/empleado.routes.js
@@ -5,11 +5,11 @@ const { CACHE_TIME } = require("../helpers");
 module.exports = function({ EmpleadoController }) {
   const router = Router();
 
-  router.get("/", [/*AuthMiddleware,*/ ParseIntMiddleware], EmpleadoController.getAll);
-  router.get("/local", AuthMiddleware, EmpleadoController.getAllSQL);
-  router.get("/:idEmpleado", ParseIntMiddleware, EmpleadoController.get);
-  router.patch("/:idEmpleado", ParseIntMiddleware, EmpleadoController.update);
-  router.delete("/:idEmpleado", ParseIntMiddleware, EmpleadoController.delete);
+  router.get("/", [AuthMiddleware, ParseIntMiddleware], EmpleadoController.getAll);
+  router.get("/local", [AuthMiddleware, ParseIntMiddleware], EmpleadoController.getAllSQL);
+  router.get("/:idEmpleado", [AuthMiddleware, ParseIntMiddleware], EmpleadoController.get);
+  router.patch("/:idEmpleado", [AuthMiddleware, ParseIntMiddleware], EmpleadoController.update);
+  router.delete("/:idEmpleado", [AuthMiddleware, ParseIntMiddleware], EmpleadoController.delete);
 
   return router;
 };
